# fundamentals-embeddings

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fundamentals_embeddings/: __init__.py  example.py
scripts/: test_embeddings.py  vector_creator.py
