[project]
name = "fundamentals-embeddings"
version = "0.1.0"
description = "Code for embeddings details in the fundamentals stream of the typeshift event"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/TypeshiftAI/fundamentals-embeddings"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fundamentals_embeddings"]
